# rustyrails

./: Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs
src/web/: mod.rs
src/web/actions/: greet.rs
src/web/scopes/: mod.rs  name.rs
src/web/views/html/: __layout.rs  greet.rs  mod.rs  root.rs
