[package]
name = "rustyrails"
version = "0.1.0"
authors = ["kevlarr <6306496+kevlarr@users.noreply.github.com>"]
edition = "2018"

[dependencies]

actix-files = "0.5"
actix-multipart = "0.3"
actix-rt = "1"
actix-service = "1.0"
actix-web = "3"
futures = "0.3"
maud = {version = "0.22", features = ["actix-web"]}
